# cm-vsm

./: .gitignore  README.md
.github/workflows/: main.yml
creo/: downloader.py  s3.py
dias/: downloader.py  logger.py  main_engine.py  product_reader.py  product_tiler.py  s3.py  uploader.py  utilities.py
fmsc/: environment.yml  extract_nc.py  find_missing_bands.py  shapecrop.py  subsplit.py  validate.py
gsfc/: shapecrop.py
visualizer/: cm-vsm-vis.py  environment.yml
vsm/: CMakeLists.txt  environment.yml
vsm/cmake/modules/: FindGraphicsMagick.cmake  FindNetCDF.cmake  FindOpenJPEG.cmake  common.cmake
vsm/doc/: cm_vsm.doxyfile
vsm/include/: version.hpp
vsm/include/raster/: bhc_tif.hpp  cnes_maja_clm_tif.hpp  esa_s2.hpp  esa_s2_band_jp2.hpp  esa_s2_scl_jp2.hpp  esa_s2_tci_jp2.hpp  jp2_image.hpp  kz_s2_tif.hpp  netcdf_interface.hpp  png_image.hpp  raster_image.hpp  segmentsai_raster.hpp  supervisely_raster.hpp  tif_image.hpp
vsm/include/util/: datetime.hpp  geometry.hpp  text.hpp
vsm/include/vector/: cvat.hpp  cvat_rasterizer.hpp  gml.hpp  supervisely_rasterizer.hpp
vsm/lib/: CMakeLists.txt
vsm/lib/raster/: bhc_tif.cpp  cnes_maja_clm.cpp  esa_s2.cpp  esa_s2_band_jp2.cpp  esa_s2_scl_jp2.cpp  esa_s2_tci_jp2.cpp  jp2_image.cpp  kz_s2_tif.cpp  netcdf_interface.cpp  png_image.cpp  raster_image.cpp  segmentsai_raster.cpp  supervisely_raster.cpp  tif_image.cpp
vsm/lib/util/: datetime.cpp  geometry.cpp  text.cpp
vsm/lib/vector/: cvat.cpp  cvat_rasterizer.cpp  gml.cpp  supervisely_rasterizer.cpp
vsm/test/: CMakeLists.txt  main.cpp
vsm/vsm/: CMakeLists.txt  main.cpp
